feat: subscriber counts api (#133)
